--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Print metadata
         run: echo "${{ toJSON(steps.metadata.outputs) }}"
 
-      - name: Enable auto-merge for Dependabot PRs
+      - name: Enable auto-merge for Dependabot base image PRs
         if: steps.metadata.outputs.package-ecosystem == 'docker' && steps.metadata.outputs.update-type == 'version-update:semver-patch'
         run: gh pr merge --auto --merge "$PR_URL"
         env:
